--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,16 @@
     <string name="app_name">TaskAppAndroid</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search">Search</string>
+    <string name="sort_by_high_priority">Sort by High Priority</string>
+    <string name="delete_all">Delete all</string>
+    <string name="enter_task">Enter Task</string>
+    <string name="add">Add</string>
+    <string name="update">Update</string>
+    <string-array name="priorities">
+        <item>Haute priorité</item>
+        <item>Priorité moyenne</item>
+        <item>Priorité basse</item>
+    </string-array>
 </resources>
+
